# zero2prod

./: Cargo.toml  Dockerfile  cargo_test_commands.txt  curl_commands.txt
configuration/: base.yaml  production.yaml
migrations/: 20251012065353_make_status_not_null_in_subscriptions.sql  20251018075750_create_subscription_tokens_table.sql  20251210181821_seed_user.sql
scripts/: init_redis.sh
src/: authentication.rs  configuration.rs  lib.rs  main.rs  session_state.rs  startup.rs
src/authentication/: middleware.rs  password.rs
src/routes/: newsletters.rs  subscriptions.rs
src/routes/admin/: dashboard.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  mod.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
