[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path= "src/lib.rs"

[[bin]]
path= "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web= "4.9.0"
config= "0.14"
serde = { version= "1", features = ["derive"]}
tokio= { version= "1.39.3", features = ["macros", "rt-multi-thread"] }
chrono = "0.4.41"
uuid = { version = "1.18.1", features = ["v4"] }
tracing= { version= "0.1", features = ["log"] }
tracing-subscriber= { version= "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter= "0.3"
tracing-log= "0.2"
tracing-actix-web= "0.7"
secrecy = { version = "0.8", features = ["serde"] }

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version= "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest= "0.12"
