[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path= "src/lib.rs"

[[bin]]
path= "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web= "4.9.0"
config= "0.14"
serde = { version= "1", features = ["derive"]}
tokio= { version= "1.39.3", features = ["macros", "rt-multi-thread"] }
chrono = "0.4.41"
uuid = { version = "1.18.1", features = ["v4"] }
tracing= { version= "0.1", features = ["log"] }
tracing-subscriber= { version= "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter= "0.3"
tracing-log= "0.2"
tracing-actix-web= "0.7"
secrecy = { version = "0.8", features = ["serde"] }
serde-aux = "4"
unicode-segmentation = "1.12.0"
validator = "0.20.0"
linkify = "0.10.0"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version= "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies.reqwest]
version= "0.12"
default-features = false
# We need the `json` feature flag to serialize/deserialize JSON payloads
features = ["json", "rustls-tls"]

[dev-dependencies]
claims = "0.8.0"
fake = "4.4.0"
linkify= "0.10.0"
rand = "0.9.2"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde_json = "1"
tokio= { version= "1", features = ["rt", "macros"] }
wiremock= "0.6"
